Fixes the spacing and tooltip for breakdown card in storage dashboards

--- a/frontend/packages/ceph-storage-plugin/src/components/dashboard-page/storage-dashboard/breakdown-card/breakdown-card.scss
+++ b/frontend/packages/ceph-storage-plugin/src/components/dashboard-page/storage-dashboard/breakdown-card/breakdown-card.scss
@@ -7,6 +7,7 @@
 
 .capacity-breakdown-card__capacity-body {
   font-size: var(--pf-global--FontSize--sm);
+  margin-bottom: 0;
 }
 
 .capacity-breakdown-card__header-link {
